# 2025-realthon

./: .dockerignore  .gitignore  Dockerfile  README.md  add_scores.py  docker-compose.yml  hackathon.db  import_csv.py  init_db.py  main.py  pyproject.toml
ML/: .gitignore  README.md  SetTransformer_sweep.ipynb  model_loader.py
crawling/: cose341_klue_reviews.csv  klue_crawler.py  klue_reviews_multi.csv
prompt/: each_advice_prompt.py  whole_advice_prompt.py
