[project]
name = "2025-realthon"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.121.3",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "openai>=2.8.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "uvicorn[standard]>=0.38.0",
    "wandb>=0.23.0",

    "sqlalchemy>=2.0.0",
]
