[project]
name = "2025-realthon"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.121.3",
    "numpy>=2.3.5",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.0",
    "torch>=2.9.1",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "openai>=2.8.1",
    "scipy>=1.16.3",
    "selenium>=4.38.0",
    "wandb>=0.23.0",
    "webdriver-manager>=4.0.2",
]
